--- a/pom.xml
+++ b/pom.xml
@@ -49,3 +49,8 @@
 		</plugins>
 	</build>
 </project>
+
+<properties>
+  <sonar.organization>zavadilb</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+</properties>
